---
= Novedades de los clústeres de ONTAP en las instalaciones
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Descubre las novedades de la gestión de clústeres de ONTAP en las instalaciones de BlueXP.



== 7 de octubre de 2024



=== Compatibilidad con los sistemas ASA R2

Ahora puede descubrir los sistemas NetApp ASA R2 en BlueXP . Después de detectar un sistema NetApp ASA R2 y abrir el entorno de trabajo, se le pasará directamente a System Manager.

No hay otras opciones de gestión disponibles con los sistemas ASA R2. No se puede utilizar la vista estándar y no se pueden habilitar los servicios de BlueXP.

https://docs.netapp.com/us-en/asa-r2/index.html["Obtenga más información sobre los sistemas R2 de ASA"^]



== 22 de abril de 2024



=== Ya no se admiten plantillas de volumen

Ya no puede crear un volumen a partir de una plantilla. Esta acción se asoció con el servicio de corrección de BlueXP, que ya no está disponible.



== 30 de julio de 2023



=== Cree volúmenes de FlexGroup

Si estás gestionando un clúster con un conector, ahora puede crear volúmenes de FlexGroup mediante la API de BlueXP.

* https://docs.netapp.com/us-en/bluexp-automation/cm/wf_onprem_flexgroup_ontap_create_vol.html["Conozca cómo crear un volumen de FlexGroup"^]
* https://docs.netapp.com/us-en/ontap/flexgroup/definition-concept.html["Vea qué es un volumen de FlexGroup"^]




== 2 de julio de 2023



=== Detección de clúster desde Mi estado

Ahora puedes detectar los clústeres de ONTAP on-premises desde *Canvas > Mi estado* mediante la selección de un clúster que BlueXP detectó previamente a partir de los clústeres de ONTAP asociados con la dirección de correo electrónico para tu inicio de sesión de BlueXP.

https://docs.netapp.com/us-en/bluexp-ontap-onprem/task-discovering-ontap.html#add-a-pre-discovered-cluster["Aprenda a descubrir clústeres en la página Mi estado"].



== 4 de mayo de 2023


