@@ -516,7 +516,6 @@
   <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">Seminarios web sobre el cloud</block>
   <block id="74702430dfc941eaabc5007d9e5554f6" category="list-text"><block ref="74702430dfc941eaabc5007d9e5554f6" category="inline-link-rx"></block></block>
   <block id="3ebda767e5f86db4657a423fd661132a" category="list-text">El host de conector debe permitir las conexiones salientes a través del puerto 443 (HTTPS) y el clúster de ONTAP debe permitir el acceso HTTP entrante a través del puerto 443 a la LIF de administración del clúster.</block>
-  <block id="fde1abb5537b55c34521d414267b3f70" category="section-title">Sistemas ASA r2</block>
   <block id="0bf2301f5cb3996192947186158c2e09" category="paragraph">Después de detectar un sistema NetApp ASA R2 y abrir el entorno de trabajo, se le pasará directamente a System Manager.</block>
   <block id="d5861f4539296095cd7c9fdfd0c5a2c9" category="paragraph">No hay otras opciones de gestión disponibles con los sistemas ASA R2. No se puede utilizar la vista estándar y no se pueden habilitar los servicios de BlueXP.</block>
   <block id="989977a18a476a92018e04dd60ec37c1" category="inline-link">Obtenga más información sobre los sistemas R2 de ASA</block>
@@ -537,5 +536,9 @@
   <block id="8166996cb4a59c147200d89a061bb49c" category="paragraph">Estas credenciales de NSS están asociadas con su ID de organización de BlueXP  específico. Los usuarios que pertenecen a la organización BlueXP  pueden acceder a estas credenciales desde *Soporte &gt; Administración de NSS*.</block>
   <block id="e5182edc3707e8e354c40ab7fa819f39" category="section-title">7 de octubre de 2024</block>
   <block id="1e095c69621645fccc8f12cd7f35f6fc" category="section-title">Compatibilidad con los sistemas ASA R2</block>
-  <block id="effcb34ce55a7b0374e99feabbc3c970" category="paragraph">Ahora puede descubrir los sistemas NetApp ASA R2 en BlueXP . Después de detectar un sistema NetApp ASA R2 y abrir el entorno de trabajo, se le pasará directamente a System Manager.</block>
+  <block id="835e40a074ba47935e3e68e3452eb52f" category="section-title">Limitaciones relacionadas con los sistemas ASA R2</block>
+  <block id="f2fba5567ec0d8ae5addf04c960ba6d0" category="list-text">La detección de sistemas ASA R2 no es compatible cuando se usa BlueXP  en el modo privado.</block>
+  <block id="d26c29507d869d48f4861c9b4bae1f6e" category="paragraph">Ahora puede descubrir los sistemas NetApp ASA R2 en BlueXP  al utilizar BlueXP  en modo estándar o privado. Después de detectar un sistema NetApp ASA R2 y abrir el entorno de trabajo, se le pasará directamente a System Manager.</block>
+  <block id="62bd7572081df25dd3f1f52151883c4a" category="inline-link">Obtenga más información sobre los modos de implementación de BlueXP</block>
+  <block id="d3342e15149bfef7fd9289d7025e506e" category="list-text"><block ref="d3342e15149bfef7fd9289d7025e506e" category="inline-link-rx"></block></block>
 </blocks>
